# a-dev

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  LOCAL_EXECUTION_GUIDE.md  LOCAL_EXECUTOR_GUIDE.md  README.md  config.toml  docker-compose.yml
.cargo/: config.toml
action/: Dockerfile  README.md  action.yml  execute_task.py
crates/autodev-ai/: Cargo.toml  README.md
crates/autodev-ai/prompts/: ci_fix_system.txt  code_review_system.txt  commit_message_system.txt  domain_detection_system.txt  example_selection_system.txt  few_shot_examples.json  security_analysis_system.txt  task_decomposition_system.txt  task_execution_system.txt
crates/autodev-ai/src/: agent.rs  claude.rs  decomposer.rs  docker_ai_executor.rs  error.rs  examples.rs  lib.rs  openai.rs  schema.rs
crates/autodev-api/: Cargo.toml
crates/autodev-api/src/: lib.rs  main.rs  state.rs
crates/autodev-api/src/handlers/: callback.rs  composite.rs  health.rs  mod.rs  stats.rs  task.rs  webhook.rs
crates/autodev-api/src/routes/: mod.rs
crates/autodev-cli/: Cargo.toml
crates/autodev-cli/src/: cli.rs  commands.rs  main.rs
crates/autodev-core/: Cargo.toml
crates/autodev-core/src/: composite_task.rs  engine.rs  error.rs  lib.rs  task.rs
crates/autodev-db/: Cargo.toml
crates/autodev-db/src/: error.rs  lib.rs  models.rs  repository.rs
crates/autodev-executor/: Cargo.toml
crates/autodev-executor/src/: lib.rs
crates/autodev-github/: Cargo.toml
crates/autodev-github/src/: app_auth.rs  client.rs  error.rs  lib.rs  repository.rs  webhook.rs  workflow.rs
crates/autodev-local-executor/: Cargo.toml
crates/autodev-local-executor/src/: claude.rs  docker.rs  docker_executor.rs  error.rs  git.rs  lib.rs
crates/autodev-worker/: Cargo.toml
crates/autodev-worker/src/: docker_executor.rs  executor.rs  lib.rs  main.rs  scheduler.rs
dashboard/: bun.lockb  package.json  vite.config.ts
dashboard/src/: index.css  routeTree.gen.ts
dashboard/src/components/: TaskStatusBadge.tsx
dashboard/src/lib/api/: client.ts
dashboard/src/routes/: __root.tsx  index.tsx
dashboard/src/routes/tasks/: $taskId.tsx  index.tsx  new.tsx
docker/claude-executor/: .dockerignore  Dockerfile  README.md
docker/worker/: Dockerfile  README.md  entrypoint.sh
docs/: NEW_ARCHITECTURE.md  SETUP.md  WORKFLOW_UPDATE_GUIDE.md
templates/: autodev.yml  execute_task.py
tests/: integration_test.rs
