[package]
name = "autodev-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bollard = "0.16"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"

# Internal
autodev-core = { workspace = true }

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"