[package]
name = "autodev-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
autodev-core = { workspace = true }
autodev-ai = { workspace = true }
autodev-db = { workspace = true }
autodev-github = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Database
sqlx = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Configuration
config = { workspace = true }
dotenv = { workspace = true }

# Date/time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }
