[package]
name = "autodev-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "autodev"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }

# Internal
autodev-core = { workspace = true }
autodev-github = { workspace = true }
autodev-ai = { workspace = true }
autodev-db = { workspace = true }
autodev-executor = { workspace = true }
autodev-api = { workspace = true }
autodev-local-executor = { path = "../autodev-local-executor" }
axum = { workspace = true }