[package]
name = "autodev-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Internal crates
autodev-core = { workspace = true }
autodev-github = { path = "../autodev-github" }
autodev-db = { path = "../autodev-db" }
autodev-worker = { path = "../autodev-worker" }

[dev-dependencies]
tokio-test = "0.4"
