[package]
name = "autodev-github"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# GitHub specific
octocrab = "0.32"
jsonwebtoken = "9.2"

# Cryptography (for webhook signature verification)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Internal
autodev-core = { workspace = true }

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"