[package]
name = "autodev-local-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Docker client
bollard = "0.16"

# Git operations
git2 = "0.18"

# HTTP client (for callbacks)
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Filesystem
tempfile = "3.8"

# Futures
futures-util = "0.3"

# Internal crates
autodev-core = { path = "../autodev-core" }
autodev-github = { path = "../autodev-github" }

# Time
chrono = { version = "0.4", features = ["serde"] }
