[package]
name = "autodev-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "autodev-worker"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }

# Internal
autodev-core = { workspace = true }
autodev-github = { workspace = true }
autodev-ai = { workspace = true }
autodev-db = { workspace = true }
autodev-local-executor = { workspace = true }